@@ -22,6 +22,7 @@ DFHack Future
         stockflow: Fixed error message in Arena mode
         stockflow: No longer checks the DF version
         stockflow: Fixed ballistic arrow head orders
+        stockflow: Now convinces the bookkeeper to update records more often
         zone: Stopped crash when scrolling cage owner list
     New Plugins
     New Scripts
